<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register"
        style="@style/MaterialTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_login"
        style = "@style/MaterialTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_login_here"
        android:layout_marginTop="70dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_login"
        style = "@style/MaterialTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password_here"
        app:layout_constraintTop_toBottomOf="@id/username_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margin_horizontally"
        android:layout_marginBottom="40dp"
        android:text="@string/button_register"
        app:layout_constraintBottom_toTopOf="@id/swipe_right" />

    <com.google.android.material.textview.MaterialTextView
        style = "@style/MaterialTextStyle"
        android:id="@+id/swipe_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/picture_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity = "center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="@string/swipe_right_to_login" />
    <ImageView
        android:id="@+id/picture_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:minWidth="50dp"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/primary" />


</androidx.constraintlayout.widget.ConstraintLayout>