<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="fill_vertical|bottom"
        android:orientation="vertical"
        android:padding="@dimen/m_margin"
        tools:context=".ui.fragment.OnlineGameFragment">

        <TextView
            android:id="@+id/textview_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m_margin"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginBottom="@dimen/xl_margin"
            android:fontFamily="@font/roboto_black"
            android:text="@string/lets_play"
            android:textColor="@color/black"
            android:textSize="@dimen/h1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_gallow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_play"
            android:layout_margin="@dimen/m_margin"
            android:elevation="@dimen/standart_corners"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/standart_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_play">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/m_margin"
                android:paddingVertical="@dimen/s_margin">

                <ImageView
                    android:id="@+id/imageview_gallows"
                    android:layout_width="@dimen/imageview_game_height"
                    android:layout_height="@dimen/imageview_game_height"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/gallows"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textview_gallows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/s_margin"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/gallows_online"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/m_margin"
                    android:layout_marginBottom="@dimen/m_margin"
                    android:background="@drawable/next_button"
                    app:layout_constraintBottom_toTopOf="@id/textview_gallows"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_crossword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardview_gallow"
            android:layout_marginHorizontal="@dimen/m_margin"
            android:layout_marginTop="@dimen/xl_margin"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/standart_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview_gallow">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/m_margin"
                android:paddingVertical="@dimen/s_margin">

                <ImageView
                    android:id="@+id/imageview_crossword"
                    android:layout_width="@dimen/imageview_game_height"
                    android:layout_height="@dimen/imageview_game_height"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/crossword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textview_crossword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/s_margin"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/crossword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/m_margin"
                    android:layout_marginBottom="@dimen/m_margin"
                    android:background="@drawable/next_button"
                    app:layout_constraintBottom_toTopOf="@id/textview_crossword"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_quest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardview_crossword"
            android:layout_marginHorizontal="@dimen/m_margin"
            android:layout_marginTop="@dimen/xl_margin"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/standart_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/m_margin"
                android:paddingVertical="@dimen/s_margin">

                <ImageView
                    android:id="@+id/imageview_quest"
                    android:layout_width="@dimen/imageview_game_height"
                    android:layout_height="@dimen/imageview_game_height"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/quiz"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textview_quest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/s_margin"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/quest"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/m_margin"
                    android:layout_marginBottom="@dimen/m_margin"
                    android:background="@drawable/next_button"
                    app:layout_constraintBottom_toTopOf="@id/textview_quest"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_below="@id/cardview_crossword"
            android:layout_marginTop="@dimen/m_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview_crossword" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_below="@id/cardview_quest"
            android:layout_marginTop="@dimen/xl_margin"
            android:src="@drawable/icon_play_games" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
