<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="@dimen/m_margin"
    tools:context=".ui.fragment.MainFragment">

    <TextView
        android:id="@+id/textview_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_to_do"
        android:textColor="@color/black"
        android:textSize="@dimen/h1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/l_margin"
        android:layout_marginTop="@dimen/xl_margin"
        android:visibility="visible"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_welcome">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/m_margin">

            <TextView
                android:id="@+id/textview_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/l_margin"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/games"
                android:textColor="@color/white"
                android:textSize="@dimen/h1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_crossword"
                android:layout_width="@dimen/imageview_game_icon"
                android:layout_height="@dimen/imageview_game_icon"
                android:layout_marginTop="@dimen/xl_margin"
                android:contentDescription="@string/app_name"
                android:src="@drawable/crossword_main_icon"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_games" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_quest"
                android:layout_width="@dimen/imageview_game_icon"
                android:layout_height="@dimen/imageview_game_icon"
                android:layout_marginStart="@dimen/m_margin"
                android:contentDescription="@string/app_name"
                android:src="@drawable/quest_main_icon"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageview_crossword"
                app:layout_constraintTop_toTopOf="@id/imageview_crossword" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_gallows"
                android:layout_width="@dimen/imageview_game_icon"
                android:layout_height="@dimen/imageview_game_icon"
                android:layout_marginTop="@dimen/xl_margin"
                android:layout_marginBottom="@dimen/l_margin"
                android:contentDescription="@string/app_name"
                android:src="@drawable/gallows_main_icon"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@id/imageview_quest"
                app:layout_constraintStart_toStartOf="@id/imageview_crossword"
                app:layout_constraintTop_toBottomOf="@id/imageview_crossword" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imageview_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xxl_margin"
                android:layout_marginBottom="@dimen/l_margin"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/app_name"
                android:src="@android:drawable/ic_menu_help"
                app:fabCustomSize="@dimen/xxl_margin"
                app:layout_constraintEnd_toEndOf="@id/imageview_quest"
                app:layout_constraintStart_toStartOf="@id/imageview_crossword"
                app:layout_constraintTop_toBottomOf="@id/imageview_gallows" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_statistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xl_margin"
        android:layout_marginTop="@dimen/xl_margin"
        android:visibility="visible"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardview_games"
        app:layout_constraintTop_toTopOf="@id/cardview_games">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/s_margin">

            <TextView
                android:id="@+id/textview_statistic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/s_margin"
                android:layout_marginTop="@dimen/l_margin"
                android:layout_marginBottom="@dimen/m_margin"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/statistic"
                android:textColor="@color/black"
                android:textSize="@dimen/h2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_analyse"
                android:layout_width="@dimen/imageview_game_icon"
                android:layout_height="@dimen/imageview_game_icon"
                android:layout_marginTop="@dimen/xl_margin"
                android:layout_marginBottom="@dimen/m_margin"
                android:contentDescription="@string/app_name"
                android:src="@drawable/analysis"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/imageview_dashboard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_dashboard"
                android:layout_width="@dimen/imageview_game_icon"
                android:layout_height="@dimen/imageview_game_icon"
                android:layout_marginBottom="@dimen/s_margin"
                android:contentDescription="@string/app_name"
                android:src="@drawable/analytics"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/textview_statistic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_gain_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xl_margin"
        android:layout_marginTop="@dimen/xl_margin"
        android:visibility="visible"
        app:cardBackgroundColor="#B0CDF9"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardview_games"
        app:layout_constraintTop_toBottomOf="@id/cardview_statistic">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/s_margin"
            android:paddingTop="@dimen/s_margin"
            android:paddingBottom="@dimen/xl_margin">

            <TextView
                android:id="@+id/textview_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/s_margin"
                android:layout_marginVertical="@dimen/l_margin"
                android:layout_marginBottom="@dimen/m_margin"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/money"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/h2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_application"
                android:layout_width="@dimen/imageview_game_icon"
                android:layout_height="@dimen/imageview_game_icon"
                android:layout_marginTop="@dimen/xxl_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:contentDescription="@string/app_name"
                android:src="@drawable/application"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@id/textview_money"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/xl_margin"
        android:scaleType="centerInside"
        android:src="@drawable/investment"
        android:layout_marginEnd="@dimen/xl_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/cardview_games"
        app:layout_constraintEnd_toStartOf="@id/cardview_gain_money"
        app:layout_constraintTop_toBottomOf="@id/cardview_games" />

</androidx.constraintlayout.widget.ConstraintLayout>